# alewa

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  alewa.cpp  alewa.test.cpp
src/alewa/: server.cpp  server.hpp  utils.hpp
src/alewa/io/: ioapi.cpp  ioapi.hpp  ioapi_sys.cpp  ioapi_sys.hpp  ioapi_system.cpp  ioapi_system.hpp  pollapi.cpp  pollapi.hpp  pollapi_system.cpp  pollapi_system.hpp  poller.cpp  poller.hpp  sockapi_mock.cpp  sockapi_mock.hpp  socket.hpp  socket.test.cpp
src/alewa/net/: mocknet_provider.cpp  mocknet_provider.hpp  mocknetapi.cpp  mocknetapi.hpp  net_provider.cpp  net_provider.hpp  netapi.cpp  netapi.hpp  netapi_mock.cpp  netapi_mock.hpp  netapi_system.cpp  netapi_system.hpp  network.hpp  network.test.cpp  socket.hpp  socket.test.cpp  sysnet_provider.cpp  sysnet_provider.hpp  sysnetapi.cpp  sysnetapi.hpp
src/alewa/sys/: err_desc.cpp  err_desc.hpp
src/alewa/test/: test.cpp  test.h  test.hpp  test_utils.hpp
